save to local storage only when moving to next page. added button to add more <li>'s

--- a/styles/style.css
+++ b/styles/style.css
@@ -7,3 +7,9 @@ li {
   line-height: 2;
   letter-spacing: 1px;
 }
+
+ul.no-bullets {
+  list-style-type: none; /* Remove bullets */
+  padding: 0; /* Remove padding */
+  margin: 0; /* Remove margins */
+}
