--- a/src/index.css
+++ b/src/index.css
@@ -12,9 +12,11 @@ body {
 
 .container {
   max-width: 500px;
-  margin: 30px auto;
+  width: 95%;
+  margin: 20px auto;
+  height: calc(100vh - 40px);
   overflow: auto;
-  min-height: 300px;
+  /* min-height: 300px; */
   border: 1px solid #3c5aed;
   padding: 30px;
   border-radius: 5px;
